--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,8 +2,8 @@
   "name": "cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "start": "tsc --watch --preserveWatchOutput",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +11,8 @@
   "dependencies": {
     "commander": "^12.0.0",
     "local-api": "^1.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
