--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "local-api",
+  "name": "@ch444/jbook-local-api",
   "version": "1.0.0",
   "description": "",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "scripts": {
     "start": "tsc --watch --preserveWatchOutput",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +26,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "http-proxy-middleware": "^2.0.6",
-    "local-client": "^0.1.0"
+    "@ch444/jbook-local-client": "^0.1.0"
   }
 }
