--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -23,9 +23,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@ch444/jbook-local-client": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "http-proxy-middleware": "^2.0.6",
-    "@ch444/jbook-local-client": "^0.1.0"
+    "http-proxy-middleware": "^2.0.6"
   }
 }
